# wasm-choc-cmake-deno

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  reference.txt
Scripts/: build_macos_ninja.sh  build_windows_ninja.bat
Scripts/deno/: build-wasm-modules.ts  move-artefacts.ts  prepare-emsdk.ts  run-all.ts  run-build-and-move.ts  run-build-wasm-modules.ts  run-move-artefacts.ts  run-prepare-emsdk.ts
Scripts/deno/tasks/: build-wasm-modules.ts  move-artefacts.ts  prepare-emsdk.ts
WasmModules/: CMakeLists.txt
WasmModules/HelloChocWasm/: CMakeLists.txt
WasmModules/HelloChocWasm/Source/: Calc.cpp  Calc.h  ChocBinder.cpp  ChocWrapper.cpp  ChocWrapper.h  EmscriptenBinding.cpp  Main.cpp
WasmModules/choc-emscripten/: CMakeLists.txt
WasmModules/choc-emscripten/Source/: EmscriptenBinding.cpp
WasmTests/: test.ts  wasm_test.ts
WasmTests/cpp/: CMakeLists.txt  choc_tests.h  main.cpp
WasmTests/deno/: test.ts
